# trainerlab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tl
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250129_0001_001_initial_schema.py  20250129_0002_002_add_indexes.py  20260130_0001_003_card_usage_view.py  20260201_0001_004_add_waitlist_table.py  20260201_0001_004_enhance_meta_snapshots.py  20260201_0002_005_add_format_rotation_tables.py  20260201_0003_006_add_lab_notes_table.py  20260201_0004_007_add_tournament_tier.py  20260201_0005_008_add_jp_innovation_tables.py  20260201_0006_009_add_waitlist_table.py  20260202_0001_010_rename_firebase_uid_to_auth_provider_id.py  20260203_0001_011_add_unique_source_url.py  20260203_0001_016_add_translation_tables.py  20260203_0002_012_backfill_tournament_tiers.py  20260203_0003_013_add_is_beta_tester_to_users.py  20260203_0004_014_add_lab_note_workflow_and_revisions.py  20260204_0001_015_add_evolution_tables.py  20260204_0002_017_add_card_id_mappings.py  20260204_0003_018_add_creator_tables.py  (+22 more)
apps/api/fixtures/: formats.json  tournaments.json
apps/api/scripts/: entrypoint.sh  seed-formats.py  seed-tournaments.py  shadow_compare.py  sprite_coverage_report.py  sync-card-mappings.py  sync-cards.py  validate_jp_pipeline.py
apps/api/src/: __init__.py  config.py  main.py
apps/api/tests/: conftest.py  test_adaptation_classifier.py  test_admin_dependency.py  test_admin_router.py  test_api_key_auth.py  test_api_key_service.py  test_archetype_detection_golden.py  test_archetype_detector.py  test_archetype_edge_cases.py  test_archetype_normalizer.py  test_archetype_quality.py  test_auth.py  test_base.py  test_batch_lookup_limitless.py  test_card_batch.py  test_card_id_normalization.py  test_card_reprints_data.py  test_card_sync.py  test_card_usage_view.py  test_cards.py  test_claude_client.py  test_cloud_tasks_pipeline.py  test_cloud_tasks_service.py  test_compute_evolution.py  test_compute_evolution_pipeline.py  test_compute_jp_intelligence.py  test_compute_meta_pipeline.py  test_config.py  test_config_anthropic.py  test_creator_dependency.py  test_data_export_extended.py  test_data_export_service.py  test_data_quality.py  test_database.py  test_deck_export.py  test_deck_import.py  test_decklist_diff.py  test_decks.py  test_en_pipeline_e2e.py  test_evolution_article_generator.py  (+68 more)
docs/: SPEC.md  (+24 more)
(+734 files in other folders)
